# weekly_puzzles

./: .gitignore  README.md  seeker_utils.py
ambiguity/: README.md  ambiguity_farming_under_uncertainty.ipynb  hello.py  pyproject.toml
exponentials/: README.md  exponentials.ipynb  hello.py  pyproject.toml
gambit-route-planning/: README.md  hello.py  network.ipynb  pyproject.toml
lic/: LICENSE_CONFIG.txt  README.md
optimizing-for-predictive-maintenance/: 01_understanding_the_problem.ipynb  02_brute_force.ipynb  README.md  hello.py  pyproject.toml
price_optimization/: README.md  hello.py  pyproject.toml  understanding_the_problem_ML.ipynb
production_planning/: README.md  production_solver.py  puzzle.md  pyproject.toml  solution.ipynb  solution.md
production_planning_multi_period/: README.md  multi_period_solver.py  puzzle_extended.md  pyproject.toml  solution_extended.ipynb  test_monte_carlo_validation.py
production_planning_twist/: README.md  basic_linear_program.ipynb  hello.py  montecarlo_sampling.ipynb  pyproject.toml
simple_optimization/: README.md  solve_newton_raphson.m
vc_funding/: pyproject.toml  solution.ipynb
