[project]
name = "gambit-route-planning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
]
