[project]
name = "price-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "setuptools>=80.9.0",
    "statsmodels>=0.14.5",
    "torch>=2.9.0",
    "xgboost>=3.1.1",
]
